--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
     <!-- TEXT -->
     <div class="hero-text">
-      <h4>Hello, I'm</h4>
+      <h4>Hallo, Saya</h4>
       <h1>
         Septi<br>
         Hidayatul<br>
         Munawaroh
       </h1>
-      <p>Software Engineering</p>
-      <a href="kontak.html" class="btn">WORK WITH ME</a>
+      <p>Rekayasa Perangkat Lunak</p>
+      <a href="kontak.html" class="btn">HUBUNGI SAYA</a>
     </div>
 
     <!-- IMAGE -->
