--- a/profil.html
+++ b/profil.html
@@ -32,7 +32,6 @@
     <!-- BIODATA -->
     <div class="biodata">
       <p><b>Nama</b><br>Septi Hidayatul Munawaroh</p>
-      <p><b>Tanggal Lahir</b><br>03 September 2007</p>
       <p><b>Email</b><br>septihidayatulmunawaroh48@gmail.com</p>
       <p><b>No HP</b><br>087786522103</p>
       <p><b>Sekolah</b><br>SMK YPC</p>
@@ -43,13 +42,9 @@
     <!-- TEKS -->
     <div class="profil-text">
       <h2>Tentang Saya</h2>
-      <h1>Software Engineering</h1>
+      <h1>Rekayasa Perangkat Lunak</h1>
       <p>
-        Saya adalah siswi SMK YPC jurusan Rekayasa Perangkat Lunak
-        yang memiliki minat pada pengembangan aplikasi dan website.
-        Terbiasa menggunakan MySQL untuk basis data, Laravel sebagai backend,
-        Flutter untuk aplikasi mobile, serta UI / UX dalam perancangan antarmuka.
-        Saya senang mempelajari hal baru untuk meningkatkan kemampuan di bidang teknologi.
+        Hallo saya Septi, saya memiliki kemampuan dalam pengembangan aplikasi dan website dengan pemahaman pemrograman serta pengelolaan basis data. Berpengalaman mengerjakan proyek menggunakan PHP, Laravel, Bootstrap, Flutter, dan MySQL, serta menerapkan prinsip UI/UX dalam pembuatan antarmuka. Terbiasa bekerja secara rapi, teliti, dan bertanggung jawab, serta memiliki motivasi tinggi untuk terus belajar dan berkembang di bidang teknologi.
       </p>
     </div>
 
