--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
 
         <div class="resume-item">
           <h3>SMK YPC</h3>
-          <span>2023 - Sekarang</span>
+          <span>2023 - 2026</span>
           <p>Rekayasa Perangkat Lunak</p>
         </div>
 
@@ -68,12 +68,7 @@
 
         <div class="skill-bar">
           <span>Indonesia</span>
-          <div class="bar"><div style="width:90%"></div></div>
-        </div>
-
-        <div class="skill-bar">
-          <span>Inggris</span>
-          <div class="bar"><div style="width:40%"></div></div>
+          <div class="bar"><div style="width:0%"></div></div>
         </div>
 
         <h2 class="resume-heading">💡 Keahlian</h2>
@@ -81,11 +76,6 @@
         <div class="skill-bar">
           <span>MySQL</span>
           <div class="bar"><div style="width:70%"></div></div>
-        </div>
-
-        <div class="skill-bar">
-          <span>Laravel</span>
-          <div class="bar"><div style="width:65%"></div></div>
         </div>
 
         <div class="skill-bar">
@@ -98,6 +88,10 @@
           <div class="bar"><div style="width:75%"></div></div>
         </div>
 
+        <div class="skill-bar">
+          <span>Laravel</span>
+          <div class="bar"><div style="width:65%"></div></div>
+        </div>
       </div>
 
     </div>
