ternyata yang kemarin bukan yang terakhir

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<!-- SIDEBAR -->
+<!-- ===== SIDEBAR ===== -->
 <div class="sidebar">
-  <div class="logo">SEPTI</div>
+  <div class="logo">Portofolio</div>
   <div class="menu">
     <a href="index.html" class="active">Beranda</a>
     <a href="profil.html">Profil</a>
@@ -19,10 +19,10 @@
   </div>
 </div>
 
-<!-- CONTENT -->
+<!-- ===== CONTENT ===== -->
 <div class="content">
 
-  <!-- HERO -->
+  <!-- ===== HERO ===== -->
   <div class="hero">
 
     <!-- TEXT -->
@@ -37,7 +37,7 @@
       <a href="kontak.html" class="btn">HUBUNGI SAYA</a>
     </div>
 
-    <!-- IMAGE -->
+    <!-- IMAGE CARD -->
     <div class="hero-img">
       <img src="asset/image/me.png" alt="Foto Septi">
     </div>
