--- a/profil.html
+++ b/profil.html
@@ -9,7 +9,7 @@
 
 <!-- SIDEBAR -->
 <div class="sidebar">
-  <div class="logo">SEPTI</div>
+  <div class="logo">portofolio</div>
   <div class="menu">
     <a href="index.html">Beranda</a>
     <a href="profil.html" class="active">Profil</a>
@@ -46,6 +46,9 @@
       <p>
         Hallo saya Septi, saya memiliki kemampuan dalam pengembangan aplikasi dan website dengan pemahaman pemrograman serta pengelolaan basis data. Berpengalaman mengerjakan proyek menggunakan PHP, Laravel, Bootstrap, Flutter, dan MySQL, serta menerapkan prinsip UI/UX dalam pembuatan antarmuka. Terbiasa bekerja secara rapi, teliti, dan bertanggung jawab, serta memiliki motivasi tinggi untuk terus belajar dan berkembang di bidang teknologi.
       </p>
+        <a href="cv/CV_KREATIVE.pdf" class="btn" target="_blank" download>
+          Lihat CV
+        </a>
     </div>
 
   </div>
