--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 
 <!-- SIDEBAR -->
 <div class="sidebar">
-  <div class="logo">SEPTI</div>
+  <div class="logo">Portofolio</div>
   <div class="menu">
     <a href="index.html">Beranda</a>
     <a href="profil.html">Profil</a>
