--- a/profil.html
+++ b/profil.html
@@ -25,9 +25,9 @@
   <div class="profil-card">
 
     <!-- FOTO -->
-    <div class="profil-img">
+    <!-- <div class="profil-img">
       <img src="asset/image/me.png" alt="Foto Septi">
-    </div>
+    </div> -->
 
     <!-- BIODATA -->
     <div class="biodata">
